--- a/Build-deploy-stroke-prediction-model-R.Rmd
+++ b/Build-deploy-stroke-prediction-model-R.Rmd
@@ -93,12 +93,11 @@ graph4 <- ggplot(df_strokemodel, aes(x="", y =ever_married, fill= ever_married))
 
 graph5 <- ggplot(df_strokemodel, aes(x="", y =Residence_type, fill= Residence_type))+ geom_bar(stat="identity", width=1)  + coord_polar("y", start=0)
 
-graph6 <- ggplot(df_strokemodel, aes(x="", y =stroke, fill= Residence_type))+ geom_bar(stat="identity", width=1)  + coord_polar("y", start=0)
 
 
-
-grid.arrange(graph1,graph2,graph3, ncol = 3)
-grid.arrange(graph4, graph5, graph6, ncol=3)
+grid.arrange(graph1,graph2, ncol = 2)
+grid.arrange(graph3, graph4, ncol=2)
+graph5
 
 ```
 
@@ -106,10 +105,11 @@ grid.arrange(graph4, graph5, graph6, ncol=3)
 #exploring relation between stroke and other variables 
 
 graph_1 <- ggplot(df_strokemodel)+ geom_bar(mapping = aes(x= gender, fill= stroke))
-graph_2 <- ggplot(df_strokemodel)+ geom_bar(mapping = aes(x= smoking_status, fill= stroke))
+graph_2 <- ggplot(df_strokemodel)+ geom_bar(mapping = aes(x= smoking_status, fill= stroke)) + theme(axis.text.x = element_text(angle = 34, vjust = 1, hjust=1))
+
 graph_3 <- ggplot(df_strokemodel)+ geom_bar(mapping = aes(x= heart_disease, fill= stroke))
 graph_4 <- ggplot(df_strokemodel)+ geom_bar(mapping = aes(x= hypertension, fill= stroke))
-graph_5 <- ggplot(df_strokemodel)+ geom_bar(mapping = aes(x= work_type, fill= stroke))
+graph_5 <- ggplot(df_strokemodel)+ geom_bar(mapping = aes(x= work_type, fill= stroke)) + theme(axis.text.x = element_text(angle = 34, vjust = 1, hjust=1))
 graph_6 <-ggplot(df_strokemodel)+ geom_bar(mapping = aes(x= Residence_type, fill= stroke))
 
 
@@ -121,6 +121,8 @@ grid.arrange(graph_4, graph_5, graph_6, ncol= 2)
 
 
 age_graph <- ggplot(data = df_strokemodel) + geom_histogram(mapping = aes(x = age), binwidth = 0.5)
+
+age_graph
 
 ```
 
@@ -273,25 +275,25 @@ summary(model)
 ```
 
 
-
+#Chi-square
 ```{r}
 anova(model, test = "Chisq")
 ```
 
 
-
+## Predictions using test data 
 
 ```{r}
 model.prob <- predict(model, testing, type = "response")
 ```
 
-
+## Confusion Matrix 
 ```{r}
 confusionMatrix(data = as.factor(as.numeric(model.prob>0.5)), reference = as.factor(testing$stroke))
 ```
 
 
-## Random Foresst for Modelling
+## Random Forest for Modelling
 
 ```{r}
 
